--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,16 @@ header h1 {
     /* Optional: rounded corners */
 }
 
+.BlogImg {
+        display: block;
+        margin: 0 auto;
+        max-width: 100%;
+        /* Ensure the image is responsive */
+        height: auto;
+        border-radius: 8px;
+        /* Optional: rounded corners for the image */
+}
+
 .DesignsColumn {
     background-color: #f0f8f5;
     /* Slightly different background color */
@@ -128,6 +138,16 @@ header h1 {
     border-radius: 5px;
     /* Optional: Rounded corners for the images */
 }
+
+nav ul li a.current {
+    border-bottom: 2px solid #747373;
+    /* Underline color */
+    padding-bottom: 4px;
+    /* Space between text and underline */
+    font-weight: bold;
+    /* Optional: Make it bold for emphasis */
+}
+
 nav ul {
     list-style-type: none;
     padding: 0;
@@ -138,7 +158,7 @@ nav ul {
 
 .nav-left {
     display: flex;
-    margin-left: 80px;
+    margin-left: 35px;
     
 }
 
@@ -171,6 +191,7 @@ nav ul li a:hover {
     color: #4CAF50;
 }
 
+
 main {
     padding: 20px;
 }
@@ -197,4 +218,13 @@ footer ul li {
 footer ul li a {
     text-decoration: none;
     color: #4CAF50;
+}
+
+.responsive-form iframe {
+    width: 100%;
+    max-width: 640px;
+    /* Maximum width */
+    height: 720px;
+    /* Fixed height */
+    border: 0;
 }
