--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ header h1 {
 }
 
 nav ul li a.current {
-    border-bottom: 2px solid #747373;
+    border-bottom: 1px solid #363535;
     /* Underline color */
     padding-bottom: 4px;
     /* Space between text and underline */
@@ -148,12 +148,26 @@ nav ul li a.current {
     /* Optional: Make it bold for emphasis */
 }
 
+/* Base styles for the navigation */
 nav ul {
     list-style-type: none;
     padding: 0;
     display: flex;
     justify-content: space-between;
     margin: 20px 0 0;
+    background-color: #ffffff;
+    /* Optional: Background color for better visibility */
+}
+
+/* Responsive styles for smaller screens */
+@media (max-width: 468px) {
+    nav ul {
+        flex-direction: column;
+    }
+
+    nav ul li {
+        margin: 10px 0;
+    }
 }
 
 .nav-left {
